--- a/styles/style.css
+++ b/styles/style.css
@@ -14,23 +14,12 @@
     background-color: var(--bg-primary);
 }
 
-.btn-modify{
+.btn-blue{
     background-color: var(--medium-blue);
     color: white;
 }
 
-.btn-modify:hover{
-    background-color: var(--medium-blue);
-    color: white;
-    filter: brightness(.9);
-}
-
-.btn-register{
-    background-color: var(--medium-blue);
-    color: white;
-}
-
-.btn-register:hover{
+.btn-blue:hover{
     background-color: var(--medium-blue);
     color: white;
     filter: brightness(.9);
