--- a/styles/style.css
+++ b/styles/style.css
@@ -19,12 +19,11 @@ body{
 }
 
 .container-menu nav a{
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.05);
     border-radius: 8px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .container-data{
@@ -42,6 +41,7 @@ body{
     filter: brightness(.9);
 }
 
+/*Form*/
 .input-blue{
     border: none;
     background-color: var(--bg-primary);
